Fix bug where empty-string notes-list-item was too big

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,3 +1,3 @@
-#note-list-item:empty:before {
+#note-list-item-title:empty:before {
     content: "\00a0";
 }
